--- a/USBDirSync/USBDirSync.csproj
+++ b/USBDirSync/USBDirSync.csproj
@@ -79,5 +79,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="FileSystemWorks\" />
+    <Folder Include="StorageWorks\" />
+    <Folder Include="UIWorks\" />
+    <Folder Include="USBWorks\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
