--- a/USBDirSync/USBDirSync.csproj
+++ b/USBDirSync/USBDirSync.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,6 +49,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileSystemWorks\DirectoryData.cs" />
+    <Compile Include="StorageWorks\Enum\LoadedFileStatus.cs" />
+    <Compile Include="FileSystemWorks\FileData.cs" />
+    <Compile Include="StorageWorks\FhsksIO.cs" />
+    <Compile Include="StorageWorks\FileStatusLoader.cs" />
     <Compile Include="UIWorks\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +74,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -80,8 +89,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="FileSystemWorks\" />
-    <Folder Include="StorageWorks\" />
     <Folder Include="USBWorks\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
