--- a/USBDirSync/USBDirSync.csproj
+++ b/USBDirSync/USBDirSync.csproj
@@ -49,12 +49,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileSystemWorks\DirectoryData.cs" />
+    <Compile Include="FileSystemWorks\DataStructures\DirectoryData.cs" />
+    <Compile Include="FileSystemWorks\Enums\SyncActionState.cs" />
     <Compile Include="FileSystemWorks\Enums\SyncConflictState.cs" />
-    <Compile Include="FileSystemWorks\Structs\SyncData.cs" />
-    <Compile Include="FileSystemWorks\Synchronizer.cs" />
+    <Compile Include="FileSystemWorks\Enums\SyncExecAccessPermit.cs" />
+    <Compile Include="FileSystemWorks\Enums\SyncPriority.cs" />
+    <Compile Include="FileSystemWorks\DataStructures\SyncData.cs" />
+    <Compile Include="FileSystemWorks\ConflictSolver.cs" />
+    <Compile Include="FileSystemWorks\SynchronizationExecuter.cs" />
     <Compile Include="StorageWorks\Enums\LoadedFileStatus.cs" />
-    <Compile Include="FileSystemWorks\FileData.cs" />
+    <Compile Include="FileSystemWorks\DataStructures\FileData.cs" />
     <Compile Include="StorageWorks\FhsksIO.cs" />
     <Compile Include="StorageWorks\FileStatusLoader.cs" />
     <Compile Include="UIWorks\Form1.cs">
