Huge update on automatic priority making. Unfortunately it was not possible to make it small. Added the whole logic of SyncRules, StatementData, SyncClassifier. Comments will be later on.

--- a/USBDirSync/USBDirSync.csproj
+++ b/USBDirSync/USBDirSync.csproj
@@ -50,13 +50,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileSystemWorks\DataStructures\DirectoryData.cs" />
+    <Compile Include="FileSystemWorks\DataStructures\StatementData.cs" />
+    <Compile Include="FileSystemWorks\DataStructures\SyncRule.cs" />
     <Compile Include="FileSystemWorks\Enums\SyncActionState.cs" />
     <Compile Include="FileSystemWorks\Enums\SyncConflictState.cs" />
-    <Compile Include="FileSystemWorks\Enums\SyncExecAccessPermit.cs" />
-    <Compile Include="FileSystemWorks\Enums\SyncPriority.cs" />
+    <Compile Include="FileSystemWorks\Enums\SyncShareAllowanceNonExistnant.cs" />
+    <Compile Include="FileSystemWorks\Enums\SyncDirection.cs" />
     <Compile Include="FileSystemWorks\DataStructures\SyncData.cs" />
     <Compile Include="FileSystemWorks\ConflictSolver.cs" />
-    <Compile Include="FileSystemWorks\SynchronizationExecuter.cs" />
+    <Compile Include="FileSystemWorks\SyncClassifier.cs" />
+    <Compile Include="FileSystemWorks\SyncExecuter.cs" />
     <Compile Include="StorageWorks\Enums\LoadedFileStatus.cs" />
     <Compile Include="FileSystemWorks\DataStructures\FileData.cs" />
     <Compile Include="StorageWorks\FhsksIO.cs" />
